--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -59,14 +59,14 @@ UIScaleRule=ShortestSide
 UIScaleCurve=(EditorCurveData=(PreInfinityExtrap=RCCE_Constant,PostInfinityExtrap=RCCE_Constant,Keys=,DefaultValue=340282346638528859811704183484516925440.000000),ExternalCurve=None)
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/CaveGeneration/CaveGeneration.CaveGeneration
+EditorStartupMap=/Engine/Maps/Templates/Template_Default.Template_Default
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/CaveGeneration/CaveGeneration.CaveGeneration
+GameDefaultMap=/Engine/Maps/Entry.Entry
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/Engine.GameMode
 GlobalDefaultServerGameMode=None
@@ -76,3 +76,5 @@ TargetedHardwareClass=Mobile
 AppliedTargetedHardwareClass=Mobile
 DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
+
+
